add main and text
add main and text

--- a/Test.html
+++ b/Test.html
@@ -8,5 +8,8 @@
 </head>
 <body>
         <h1>Newbie use github</h1>
+        <main>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, optio!</p>
+        </main>
 </body>
 </html>
