--- a/Test.html
+++ b/Test.html
@@ -11,5 +11,8 @@
         <main>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, optio!</p>
         </main>
+        <footer>
+            <h1>this is footer</h1>
+        </footer>
 </body>
 </html>
